# ParquetStudio

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  styles.css  tailwind.css
.github/workflows/: buildandtest.yml  ci.yml
backend/: Cargo.toml  tauri.conf.json
backend/src/: lib.rs  main.rs
backend/src/application/: file_app.rs  menu.rs  mod.rs
backend/src/config/: app_config.rs  mcp_settings.rs  mod.rs
backend/src/mcp_server/: server.rs
backend/src/models/: file_meta.rs  mod.rs  page_request.rs  page_response.rs  schema_field.rs
backend/src/repositories/: file_repository.rs  local_file_repository.rs  mod.rs
backend/src/services/: mod.rs  parquet_service.rs
backend/test/application/: file_app_test.rs  menu_test.rs
backend/test/config/: app_config_test.rs  mcp_settings_test.rs
backend/test/mcp_server/: mcp_server_test.rs
backend/test/models/: file_meta_test.rs  page_request_test.rs  page_response_test.rs
backend/test/repositories/: file_repository_test.rs
backend/test/services/: parquet_service_test.rs
backend/tests/: file_roundtrip_test.rs
frontend/: Cargo.toml  Leptos.toml  Trunk.toml  index.html
frontend/src/: app.rs  lib.rs  main.rs  tauri_sys.rs
frontend/src/components/: create_file_modal.rs  data_grid.rs  mcp_config_modal.rs  mod.rs  query_editor.rs  tabs.rs
frontend/src/components/layout/: mod.rs  sidebar.rs  topbar.rs
frontend/src/models/: file.rs  mod.rs  schema_field.rs
frontend/src/routes/: home.rs  settings.rs
frontend/src/services/: file_service.rs  mcp_service.rs  mod.rs  query_service.rs
frontend/src/state/: app_state.rs
frontend/src/utils/: constants.rs  format.rs  mod.rs
src/: app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: event_handler.rs  menu.rs  mod.rs
src/components/: aside.rs  file_parquet.rs  files.rs  mod.rs  schema.rs
src/models/: file_model.rs  mod.rs
tests/: backend.rs  frontend.rs
tests/backend/application/: event_handler_test.rs  mod.rs
tests/frontend/: app_test.rs
tests/frontend/components/: aside_test.rs  file_parquet_test.rs  files_test.rs  mod.rs
tests/frontend/models/: file_model_test.rs  mod.rs
(+20 files in other folders)
